# efd-notes-page

./: .env  .gitignore  404.html  EFD_slides_2409.md  EFD_slides_2409_meta.json  README.md  build_mpv_site.py  drs_q.txt  fix_lists.py  generate_from_questions.py  generate_mpv_guide.py  generate_study_guide.py  index.html  llm_client.py  main.py  mpv_lectures.json  mpv_q.txt  mpv_routing.json  pyproject.toml  route_questions.py  sitemap.xml
efd-slides/: index.html
generated_guide/: index.html
mpv/: index.html
page/: mkdocs.yml
search/: search_index.json
study_guide/: index.html
tmp_mpv_guide/: q_0001.md  q_0002.md  q_0003.md  q_0004.md  q_0005.md  q_0006.md  q_0007.md  q_0008.md  q_0009.md  q_0010.md  q_0011.md  q_0012.md  q_0013.md  q_0014.md  q_0015.md  q_0016.md  q_0017.md  q_0018.md  q_0019.md  q_0020.md  q_0021.md  q_0022.md  q_0023.md  q_0024.md  q_0025.md  q_0026.md  q_0027.md  q_0028.md  q_0029.md  q_0030.md  q_0031.md  q_0032.md  q_0033.md  q_0034.md  q_0035.md  q_0036.md  q_0037.md  q_0039.md  q_0040.md  q_0041.md  (+2 more)
tmp_questions_guide/: q_0001.md  q_0002.md  q_0003.md  q_0004.md  q_0005.md  q_0006.md  q_0007.md  q_0008.md  q_0009.md  q_0010.md  q_0011.md  q_0012.md  q_0013.md  q_0014.md  q_0015.md  q_0016.md  q_0017.md  q_0018.md  q_0019.md  q_0020.md  q_0021.md  q_0022.md  q_0023.md  q_0024.md  q_0025.md  q_0026.md  q_0027.md  q_0028.md  q_0029.md  q_0030.md  q_0031.md  q_0032.md  q_0033.md  q_0034.md  q_0035.md  q_0036.md  q_0037.md  q_0038.md  q_0039.md  q_0040.md  (+54 more)
tmp_study_guide/: chunk_0000.md  chunk_0001.md  chunk_0002.md  chunk_0003.md  (+104 more)
(+159 files in other folders)
