[project]
name = "efd-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.95.0",
    "marker-pdf>=1.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.1",
]
